# expenses-tracker

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  expenses.db  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_admin_accounts_and_activity_scope.py  0003_calendar_events.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity.py  calendar_event.py  expense.py  member.py  session.py
backend/app/schemas/: __init__.py  activity.py  admin_user.py  auth.py  calendar_event.py  expense.py  profile.py
backend/app/services/: activity_service.py  admin_user_service.py  auth_service.py  calendar_event_service.py  expense_service.py  profile_service.py  year_summary_service.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py
backend/tests/contract/: test_admin_users_contract.py  test_auth_activity_contract.py  test_expense_contract.py  test_profile_contract.py  test_summary_contract.py
backend/tests/integration/: test_admin_user_routes.py  test_auth_activity_performance.py  test_auth_routes.py  test_expense_performance.py  test_expense_routes.py  test_profile_routes.py  test_year_overview_performance.py  test_year_summary_routes.py
backend/tests/unit/: test_admin_user_service.py  test_auth_service.py  test_expense_service.py  test_profile_service.py  (+1 more)
(+278 files in other folders)
